--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playwrite+IT+Moderna:wght@396&display=swap");
 
-.playwrite-font {
+.playwrite-fonts1 {
   font-family: "Playwrite IT Moderna", cursive;
   font-optical-sizing: auto;
-  font-weight: 100;
+  font-weight: 396;
   font-style: normal;
 }
 
@@ -13,19 +13,9 @@
   font-style: italic;
 }
 
-/* .body {
-  cursor: none;
-} */
-
-.cursor {
-  position: fixed;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  border: 2px solid;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  filter: invert(100%);
-  background: transparent;
+.button-auth {
+  border: 1px solid black;
+  border-radius: 1svb;
+  padding-left: 10px;
+  font-size:x-large;
 }
